--- a/client/src/styles/AuthorSection.css
+++ b/client/src/styles/AuthorSection.css
@@ -1,3 +1,7 @@
 .author-scroll-container::-webkit-scrollbar{
     display: none;
 }
+
+.featuredAuthors-scroll-container::-webkit-scrollbar{
+    display: none;
+}
