--- a/client/src/pages/Search/Search.css
+++ b/client/src/pages/Search/Search.css
@@ -1,3 +1,10 @@
+.search-main-container{
+  font-family: "DM Sans", sans-serif;
+  font-optical-sizing: auto;
+  /* font-weight: <weight>; */
+  font-style: normal;
+}
+
 .dialog-container::-webkit-scrollbar {
   display: none;
 }
