--- a/client/src/styles/Navbar2.css
+++ b/client/src/styles/Navbar2.css
@@ -2,3 +2,21 @@
     width: 0px;
     display: none;
   }
+
+
+  .my-navbar{
+    font-family: "Work Sans", sans-serif;
+
+    /* font-family: "Noto Sans", sans-serif;
+  font-optical-sizing: auto; */
+  /* font-weight: <weight>; */
+  /* font-style: normal;
+  font-variation-settings:
+    "wdth" 100; */
+
+
+     /* font-family: "DM Sans", sans-serif;
+  font-optical-sizing: auto; */
+  /* font-weight: <weight>; */
+  /* font-style: normal; */
+  }
